# HACKATHON-CTF

./: .gitignore  Makefile  OPTIMIZACIONES.md  README.md  STRESS_TESTING.md  agents.md  docker-compose.yml
backend/: DETAILED_CHANGES.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INDICES_CHANGES.md  OPTIMIZATION_SUMMARY.md  RATE_LIMITING_CHANGES.md  RATE_LIMITING_SUMMARY.md  TEST_RESULTS.md  VERIFICATION_CHECKLIST.md  eiatube.db-shm  eiatube.db-wal  pyproject.toml  test_api_integration.py  test_imports.py  test_indices.py  test_syntax.py  verify_changes.py
backend/app/: dependencies.py  main.py
backend/app/api/: response_mappers.py
backend/app/api/routes/: __init__.py  batch.py  users.py  videos.py
backend/app/auth/providers/: __init__.py  base.py  local.py  registry.py
backend/app/core/: __init__.py  cache.py  cache_headers.py  database.py  limiter.py  media.py  pagination.py  uploads.py
backend/app/models/: __init__.py  comment.py  subscription.py  user.py  user_identity.py  video.py
backend/app/repositories/: __init__.py  comment_repository.py  interfaces.py  subscription_repository.py  user_repository.py  video_repository.py
backend/app/schemas/: __init__.py  comment.py  subscription.py  user.py  video.py
backend/app/services/: __init__.py  comment_service.py  interfaces.py  subscription_service.py  user_service.py  video_service.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Header.tsx  VideoCard.tsx
(+7 files in other folders)
