[project]
name = "eiatube-backend"
version = "0.1.0"
description = "FastAPI backend for EIATube"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy==2.0.43",
  "pydantic==2.11.7",
  "python-multipart==0.0.20",
  "redis==5.0.1",
  "aioredis==2.0.1",
  "slowapi==0.1.9",
  "httpx==0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
